--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                             {{!-- {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}} --}}
                             {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}}
                             {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}}
-                            {{#link-to "privacy" classNames="footerLink" tagName="li"}}Privacy Policy{{/link-to}}
-                            {{#link-to "terms" classNames="footerLink" tagName="li"}}Terms of Service{{/link-to}}
+                            {{#link-to "legal" classNames="footerLink" tagName="li"}}Legal{{/link-to}}
                         </ul>
                         <ul>
                             <li class="header">Get involved</li>
@@ -199,14 +198,6 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="get_involved">
-              <section class="subheader">
-                <ul>
-                  {{#link-to "get_involved" classNames="subheaderLink" tagName="li"}}Get Involved{{/link-to}}
-                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
-                  {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
-                  {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
-                </ul>
-              </section>
               <section class="page form">
                   <h1>Get involved</h1>
                   <p>Wikitongues wouldn't be anywhere without our community. There are so many ways you can help out, or send us a message if you'd just like to reach out!</p>
@@ -225,7 +216,6 @@
         <script type="text/x-handlebars" data-template-name="submit">
               <section class="subheader">
                 <ul>
-                  {{#link-to "get_involved" classNames="subheaderLink" tagName="li"}}Get Involved{{/link-to}}
                   {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
                   {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
@@ -236,31 +226,37 @@
                   <p>Support the Wikitongues community by submiting a video of your own.</p>
                   {{#link-to "submitGuidelines" classNames="secondaryLink"}}Video Guidelines{{/link-to}}
                   <ul>
-                    <li>
-                      <p>About you</p>
-                    </li>
+                    <li><p>About you</p></li>
                     <li><input type="text" id="name" name="name" placeholder="Name (Required)"></li>
                     <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
-                    <li><input type="text" id="link" name="link" placeholder="Video File Link (Dropbox, Google Drive, Mediafire)"></li>
-                    <li>
-                      <p>About the speaker</p>
-                    </li>
-                    <li><input type="text" id="speaker" name="speaker" placeholder="What is the speaker's name?"></li>
-                    <li><input type="text" id="language" name="language" placeholder="What languages are used in this video?"></li>
+                    <li><input type="text" id="link" name="link" placeholder="Link to Video File (Dropbox, Google Drive, Mediafire) (Required)"></li>
                   </ul>
-                  <p>About the video</p>
-                  <textarea name="transcription" id="transcription" class="optional" placeholder="Transcribe the video (optional)"></textarea>
-                  <textarea name="translation" id="translation" class="optional" placeholder="Translate the video (optional)"></textarea>
-                  <br>
+                  <ul>
+                    <li><p>About the speaker</p></li>
+                    <li><input type="text" id="speaker" name="speaker" placeholder="What is the speaker's name? (Required)"></li>
+                    <li><input type="text" id="language" name="language" placeholder="What languages are used in this video? (Required)"></li>
+                  </ul>
+                  <ul>
+                    <li><p>About the video</p></li>
+                    <li><input type="text" id="videoLocation" name="videoLocation" placeholder="Where was this video made? (Required)"></li>
+                    <li><textarea name="transcription" id="transcription" class="optional" placeholder="Transcribe the video (optional)"></textarea></li>
+                    <li><textarea name="translation" id="translation" class="optional" placeholder="Translate the video (optional)"></textarea></li>
+                  </ul>
                   <p>Leave us a message</p>
                   <textarea name="message" id="message" class="optional" placeholder="Message (optional)"></textarea>
+                  <ul>
+                    <li><p>Release form</p></li>
+                    <li>
+                      {{#link-to "legal" classNames="secondaryLink"}}Read Release Form{{/link-to}}
+                    </li>
+                    <li><label for="releaseForm"><input type="checkbox" id="releaseForm" name="check_list[]" value="releaseForm">I have read and accept the release form (Required)</label></li>
+                  </ul>
                   <input type="submit" id="submit" class="submit" value="Send">
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="volunteer">
               <section class="subheader">
                 <ul>
-                  {{#link-to "get_involved" classNames="subheaderLink" tagName="li"}}Get Involved{{/link-to}}
                   {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit a video{{/link-to}}
                   {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
@@ -276,22 +272,21 @@
                     <li><input type="text" id="email" name="email" placeholder="Email (Required)"></li>
                     <li><input type="text" id="location" name="location" placeholder="Location (Required)"></li>
                   </ul>
-                  <p>How would you like to contribute?</p>
                   <ul>
+                    <li><p>How would you like to contribute?</p></li>
                     <li><label for="ambassador"><input type="checkbox" id="ambassador" name="check_list[]" value="Ambassador">Language Recording</label></li>
                     <li><label for="socialMedia"><input type="checkbox" id="socialMedia" name="check_list[]" value="Social Media">Social Media</label></li>
                     <li><label for="webDev"><input type="checkbox" id="webDev" name="check_list[]" value="Web Development">Web Development</label></li>
                     <li><input type="text" id="otherVolunteer" name="" placeholder="Other (Please specify)"></li>
                   </ul>
                   <p>Please tell us a bit about yourself</p>
-                  <textarea name="message" id="message" placeholder="What do you do, "></textarea>
+                  <textarea name="message" id="message" placeholder="What do you do?"></textarea>
                   <input type="submit" id="submit"  class="submit" value="Send">
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="contact">
               <section class="subheader">
                 <ul>
-                  {{#link-to "get_involved" classNames="subheaderLink" tagName="li"}}Get Involved{{/link-to}}
                   {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
                   {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
@@ -308,16 +303,24 @@
                   <input type="text" id="submit"  class="submit" value="Send">
               </section>
         </script>
-        <script type="text/x-handlebars" data-template-name="privacy">
+        <script type="text/x-handlebars" data-template-name="legal">
               <section class="page">
-                  <h1>Privacy Policy</h1>
-                  <p>Wikitongues will never give or sell your personal information to any third-party organization or individual without your explicit consent.</p>
-              </section>
-        </script>
-        <script type="text/x-handlebars" data-template-name="terms">
-              <section class="page">
-                  <h1>Terms of Service</h1>
-                  <p>By submitting a video to Wikitongues, you hereby agree: (1) to have secured the consent of the individual or individuals who appear in that video to record them, (2) that you either possess or have obtained the legal rights to share this video online, and (3) that you irrevocably grant Wikitongues and its licensees, successors and assigns the right to license and distribute and use the video of you, including your voice, picture, portrait or likeness as captured in a still image from the footage, in any and all media and for any use whatsoever (except illegal or pornographic), including without limitation, Wikitongues, art, stock, advertising, trade and promotion, in perpetuity. If you should receive a copy of the footage, you shall only use it for your own personal use and you shall not authorize anyone else to use it. You agree and acknowledge that you have no commercial monetary rights to the footage and that Wikitongues owns all rights to the footage, including the right to copyright the footage.</p>
+                <h1>Legal</h1>
+                <div class="legal">
+                  <h2>Terms of Service</h2>
+                  <p>By submitting a video to Wikitongues, you hereby agree:</p>
+                  <ol>
+                    <li><p>to have secured the consent of the individual or individuals who appear in that video to record them,<b>very poorly phrased</b> </p></li>
+                    <li><p>that you either possess or have obtained the legal rights to share this video online, and </p></li>
+                    <li><p>that you irrevocably grant Wikitongues and its licensees, successors and assigns the right to license and distribute and use the video of you <b>what if the video is not of the person submitting?</b>, including your voice, picture, portrait or likeness as captured in a still image from the footage, in any and all media and for any use whatsoever (except illegal or pornographic), including without limitation, Wikitongues, art, stock, advertising, trade and promotion, in perpetuity.</p></li>
+                  </ol>
+                  <p>If you should receive a copy of the footage, you shall only use it for your own personal use and you shall not authorize anyone else to use it.</p>
+                  <p><b>By submitting a video to Wikitongues</b>You agree and acknowledge that you have no commercial monetary rights to the footage and that Wikitongues owns all rights to the footage, including the right to copyright the footage.</p>
+                  </div>
+                  <div class="legal">
+                    <h2>Privacy Policy</h2>
+                    <p>Wikitongues will never give or sell your personal information to any third-party organization or individual without your explicit consent.</p>
+                  </div>
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="submitGuidelines">
@@ -331,6 +334,12 @@
                   <h1>Volunteering Guidelines</h1>
                   <p>By submitting a video to Wikitongues, you hereby agree: (1) to have secured the consent of the individual or individuals who appear in that video to record them, (2) that you either possess or have obtained the legal rights to share this video online, and (3) that you irrevocably grant Wikitongues and its licensees, successors and assigns the right to license and distribute and use the video of you, including your voice, picture, portrait or likeness as captured in a still image from the footage, in any and all media and for any use whatsoever (except illegal or pornographic), including without limitation, Wikitongues, art, stock, advertising, trade and promotion, in perpetuity. If you should receive a copy of the footage, you shall only use it for your own personal use and you shall not authorize anyone else to use it. You agree and acknowledge that you have no commercial monetary rights to the footage and that Wikitongues owns all rights to the footage, including the right to copyright the footage.</p>
               </section>
+        </script>
+        <script type="text/x-handlebars" data-template-name="releaseForm">
+          <section class="page">
+              <h1>Volunteering Guidelines</h1>
+              <p>By submitting a video to Wikitongues, you hereby agree: (1) to have secured the consent of the individual or individuals who appear in that video to record them, (2) that you either possess or have obtained the legal rights to share this video online, and (3) that you irrevocably grant Wikitongues and its licensees, successors and assigns the right to license and distribute and use the video of you, including your voice, picture, portrait or likeness as captured in a still image from the footage, in any and all media and for any use whatsoever (except illegal or pornographic), including without limitation, Wikitongues, art, stock, advertising, trade and promotion, in perpetuity. If you should receive a copy of the footage, you shall only use it for your own personal use and you shall not authorize anyone else to use it. You agree and acknowledge that you have no commercial monetary rights to the footage and that Wikitongues owns all rights to the footage, including the right to copyright the footage.</p>
+          </section>
         </script>
 
 
