--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         <ul>
                             <li class="header">Organization</li>
                             {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
-                            {{!-- {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}} --}}
+                            {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
+                            {{#link-to "mission" classNames="footerLink" tagName="li"}}Mission{{/link-to}}
                             {{!-- {{#link-to "expeditions" classNames="footerLink" tagName="li"}}Expeditions{{/link-to}} --}}
                             {{#link-to "projects" classNames="footerLink" tagName="li"}}Projects{{/link-to}}
                             {{#link-to "press" classNames="footerLink" tagName="li"}}Press{{/link-to}}
@@ -88,11 +89,10 @@
                     <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
                 </section>
             {{/each}}
-            <section class="page">
+            <section class="page index">
                 <div class="information">
                     <h1>Every language in the world</h1>
-                    <!-- or "Discover the cultures of the world" -->
-                    <a href="https://www.youtube.com/user/WikiTongues" target="_blank">
+                    <a class="youTubeLink" href="https://www.youtube.com/user/WikiTongues" target="_blank">
                         <img src="img/youTubeLink.png" alt="">
                         <div class="triangle"></div>
                         <p>Join us on YouTube</p>
@@ -100,13 +100,26 @@
                     <br>
                     <p>We are a group of motely motherfuckers who go out of our way to listen (and party with) to those around us. Our mission is to record every language in the world.</p>
                     {{#link-to "about" classNames="link" tagName="p"}}Learn more here...{{/link-to}}
-                    <div class="activities">
-                      <ul>
-                        <li><img src="#" alt="ambassador"></li>
-                        <li><img src="#" alt="expedition"></li>
-                        <li><img src="#" alt="volunteer"></li>
-                      </ul>
-                    </div>
+                    <ul class="activities">
+                      <li>
+                        {{#link-to "submit" classNames="subheaderLink"}}
+                          <img src="#" alt="User submissions">
+                          <p>User submissions</p>
+                        {{/link-to}}
+                      </li>
+                      <li>
+                        {{#link-to "volunteer" classNames="subheaderLink"}}
+                          <img src="#" alt="Ambassadors">
+                          <p>Ambassadors</p>
+                        {{/link-to}}
+                      </li>
+                      <li>
+                        {{#link-to "team" classNames="subheaderLink"}}
+                          <img src="#" alt="Community">
+                          <p>Community</p>
+                        {{/link-to}}
+                      </li>
+                    </ul>
                     {{!-- <p>Join us in discovering every single language in the world!</p> --}}
                 </div>
                 &nbsp;
@@ -118,20 +131,23 @@
                 <h1>{{banner.statement}}</h1>
               </section>
         </script>
+        <script  type="text/x-handlebars" data-template-name="components/about-subheader">
+          <section class="subheader">
+            <ul>
+              {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
+              {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
+              {{#link-to "mission" className="mission" tagName="li"}}Mission{{/link-to}}
+            </ul>
+          </section>
+        </script>
         <script type="text/x-handlebars" data-template-name="about">
-            <section class="subheader">
-              <ul>
-                {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
-                {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
-                {{#link-to "mission" className="mission" tagName="li"}}Mission{{/link-to}}
-              </ul>
-            </section>
             {{#each}}
                 <section class="banner">
                     <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
                     <h1>{{text}}</h1>
                 </section>
             {{/each}}
+            {{about-subheader}}
             <section class="page">
                 <p class="drop"> We stand for the values of diversity and respect between the all the peoples of Earth.</p>
                 <p>We stand for the rights of individuals and their communities to live where they live and to be who they are, thinking, speaking and acting freely.</p>
@@ -143,17 +159,11 @@
             <div class="map-canvas"></div>
         </script>
         <script type="text/x-handlebars" data-template-name="team">
-                <section class="subheader">
-                  <ul>
-                    {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
-                    {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
-                    {{#link-to "mission" className="mission" tagName="li"}}Mission{{/link-to}}
-                  </ul>
-                </section>
                 <section class="banner team">
                     {{google-maps latitude="20" longitude="0" markers=markers}}
                     {{!-- <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zJwV6XUktfg0.kEV6pWd8WZbM&key=AIzaSyDKZeAjJRXIyUIwn0L062uINzGdBu9fFsU" width="1280" height="600" frameborder="0" style="border:0"></iframe> --}}
                 </section>
+                {{about-subheader}}
                 <section class="page">
                     <div class="team">
                         <h1 class="drop">Our team is composed of volunteers from all over the world</h1>
@@ -165,7 +175,7 @@
                                     <p class="country">{{location}}</p>
                                 </li>
                             {{/each}}
-                            <li>
+                            <li class="volunteer">
                               {{#link-to "volunteer"}}
                                 <img src="#" alt="Become a volunteer today">
                                 <p>Become a volunteer today</p>
@@ -176,15 +186,17 @@
                 </section>
         </script>
         <script type="text/x-handlebars" data-template-name="mission">
-              <section class="subheader">
-                <ul>
-                  {{#link-to "about" classNames="footerLink" tagName="li"}}About{{/link-to}}
-                  {{#link-to "team" classNames="footerLink" tagName="li"}}Team{{/link-to}}
-                  {{#link-to "mission" className="mission" tagName="li"}}Mission{{/link-to}}
-                </ul>
-              </section>
+              {{#each}}
+                <section class="banner">
+                    <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
+                    <h1>{{text}}</h1>
+                </section>
+              {{/each}}
+              {{about-subheader}}
               <section class="page">
-                  <h1>mission</h1>
+                <p class="drop"> We stand for the values of diversity and respect between the all the peoples of Earth.</p>
+                <p>We stand for the rights of individuals and their communities to live where they live and to be who they are, thinking, speaking and acting freely.</p>
+                <p>We pledge to forge connections across vast geographies, building bridges of understanding within and between cultures, and ensuring that every person has access to the breadth and the beauty of human experience.</p>
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="expeditions">
@@ -197,23 +209,38 @@
                   <h1>projects</h1>
               </section>
         </script>
-        <script type="text/x-handlebars" data-template-name="get_involved">
-              <section class="page form">
-                  <h1>Get involved</h1>
-                  <p>Wikitongues wouldn't be anywhere without our community. There are so many ways you can help out, or send us a message if you'd just like to reach out!</p>
-                  <ul>
-                    {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit a video{{/link-to}}
-                    {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
-                    {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
-                  </ul>
-              </section>
-        </script>
         <script type="text/x-handlebars" data-template-name="press">
               <section class="page">
                   <h1>press</h1>
               </section>
         </script>
-        <script type="text/x-handlebars" data-template-name="submit">
+        <script type="text/x-handlebars" data-template-name="get_involved">
+              <section class="page form">
+                  <h1>Get involved</h1>
+                  <p>Wikitongues wouldn't be anywhere without our community. There are so many ways you can help out, or send us a message if you'd just like to reach out!</p>
+                  <ul class="activities">
+                    <li>
+                      {{#link-to "submit" classNames="subheaderLink"}}
+                        <img src="#" alt="Submit a video">
+                        <p>Submit a video</p>
+                      {{/link-to}}
+                    </li>
+                    <li>
+                      {{#link-to "volunteer" classNames="subheaderLink"}}
+                        <img src="#" alt="Volunteer">
+                        <p>Volunteer</p>
+                      {{/link-to}}
+                    </li>
+                    <li>
+                      {{#link-to "contact" classNames="subheaderLink"}}
+                        <img src="#" alt="Contact">
+                        <p>Contact</p>
+                      {{/link-to}}
+                    </li>
+                  </ul>
+              </section>
+        </script>
+        <script type="text/x-handlebars" data-template-name="components/get-involved-subheader">
               <section class="subheader">
                 <ul>
                   {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
@@ -221,6 +248,9 @@
                   {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
                 </ul>
               </section>
+        </script>
+        <script type="text/x-handlebars" data-template-name="submit">
+              {{get-involved-subheader}}
               <section class="page form">
                   <h1>Submit a video</h1>
                   <p>Support the Wikitongues community by submiting a video of your own.</p>
@@ -255,13 +285,7 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="volunteer">
-              <section class="subheader">
-                <ul>
-                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit a video{{/link-to}}
-                  {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
-                  {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
-                </ul>
-              </section>
+              {{get-involved-subheader}}
               <section class="page form">
                   <h1>Become a volunteer</h1>
                   <p>Apply to join our community as a volunteer or ambassador</p>
@@ -285,13 +309,7 @@
               </section>
         </script>
         <script type="text/x-handlebars" data-template-name="contact">
-              <section class="subheader">
-                <ul>
-                  {{#link-to "submit" classNames="subheaderLink" tagName="li"}}Submit  a video{{/link-to}}
-                  {{#link-to "volunteer" classNames="subheaderLink" tagName="li"}}Volunteer{{/link-to}}
-                  {{#link-to "contact" classNames="subheaderLink" tagName="li"}}Contact{{/link-to}}
-                </ul>
-              </section>
+              {{get-involved-subheader}}
               <section class="page form">
                   <h1>Contact</h1>
                   <p>We're always eager to hear from you</p>
