--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <script src="js/dist/templates.js"></script>
 
         <!-- Livereload -->
-        <script src="http://localhost:35729/livereload.js"></script>
+        <script src="http://10.0.1.69:35729/livereload.js?snipver=1"></script>
 
         <!-- Google Analytics -->
         <script>
